[package]
name = "gangs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8", features = ["wayland","dynamic"] }
bevy-inspector-egui = "0.13.0"
rand = "0.8.5"
serde = "1.0.145"
serde_json = "1.0.86"
